# erk

./: .envrc  .erk-learn-plan-marker  .gitattributes  .gitignore  .mcp.json  .prettierignore  404.html  :!  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE.md  Makefile  PLAN-REVIEW-6231.md  PLAN-REVIEW-6236.md  PLAN-REVIEW-6250.md  PLAN-REVIEW-6264.md  PLAN-REVIEW-6273.md  PLAN-REVIEW-6288.md  PLAN-REVIEW-6325.md  PLAN-REVIEW-6366.md  PLAN-REVIEW-6396.md  PLAN-REVIEW-6427.md  PLAN-REVIEW-6465.md  PLAN-REVIEW-6502.md  PLAN-REVIEW-6528.md  PLAN-REVIEW-6630.md  PLAN-REVIEW-6720.md  PLAN-REVIEW-6726.md  PLAN-REVIEW-6803.md  PLAN-REVIEW-6810.md  PLAN-REVIEW-6846.md  PLAN-REVIEW-6858.md  PLAN-REVIEW-6889.md  PLAN-REVIEW-6892.md  PLAN-REVIEW-6895.md  PLAN-REVIEW-6908.md  PLAN-REVIEW-7218.md  PLAN-REVIEW-7415.md  PLAN-REVIEW-7442.md  (+16 more)
.claude/: settings.json
.devcontainer/: devcontainer.json
.erk/: config.toml  dot-agent.toml  kits.toml  local-runner-config.toml.example  post-implement.md  state.toml
.impl/: issue.json  local-run-state.json  plan.md  run-info.json
.worker-impl/: README.md  issue.json  local-run-state.json  plan-ref.json  plan.md  progress.md  prompt.md  task.md
TAO/: index.html
[]/: .gitignore
docs/: README.md  TAO.md  github-linked-issues.md  index.md  planner-setup.md  repository-setup.md
docs-site/: STYLE-GUIDE.md  astro.config.mjs
docs-v2/: astro.config.mjs  package-lock.json  package.json
erkdesk/: forge.config.ts  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
erkweb/: .gitignore  eslint.config.mjs  index.html  package.json  vite.config.ts
faq/: index.html
githooks/: pre-push
howto/: index.html
ref/: index.html
repos/dagster-compass/worktrees/improve-thread-view-cli/: PACKAGES.md  PR_DESCRIPTION.md  README.md  pyproject.toml  pyrightconfig.json  render.yaml
repos/dagster-compass/worktrees/improve-thread-view-cli/.buildkite/: step_builder.dhall
repos/dagster-compass/worktrees/improve-thread-view-cli/.github/workflows/: claude-code-review.yml  deploy-docs.yml
repos/dagster-compass/worktrees/improve-thread-view-cli/docs-site/: theme.config.tsx
repos/dagster-compass/worktrees/improve-thread-view-cli/docs-site/pages/: data-exploration.mdx  getting-started.mdx
repos/dagster-compass/worktrees/improve-thread-view-cli/docs-site/pages/admins/: _meta.json  slack-admin-setup.mdx
repos/dagster-compass/worktrees/improve-thread-view-cli/docs/patterns/: time-abstraction.md
repos/dagster-compass/worktrees/improve-thread-view-cli/images/: buildkite-py.Dockerfile
repos/dagster-compass/worktrees/improve-thread-view-cli/infra/slack_bot_manifests/: dev_manifest.json  prod_manifest.json  staging_manifest.json  yuhan_local_dev_manifest.json
repos/dagster-compass/worktrees/improve-thread-view-cli/scripts/: build-admin-ui.sh
repos/dagster-compass/worktrees/improve-thread-view-cli/seed_data/dagsterlabs_slack/: bot_instances.csv  connections.csv  organizations.csv
repos/dagster-compass/worktrees/improve-thread-view-cli/slack/.slack/: config.json
repos/dagster-compass/worktrees/improve-thread-view-cli/tailscale/db/: start.sh
site/: 404.html  (+2 more)
(+7605 files in other folders)
